<resources>
    <string name="app_name">My RATP stops</string>
    <string name="ratp_stops_title">RATP STOPS</string>
    <string name="unknown_time">unknown</string>
    <string name="unknown">unknown</string>
    <string name="time_before_next_bus">Time before next bus :</string>
    <string name="time_before_next_2nd_bus">Time before 2nd bus :</string>

    <string-array name="ar_array">
        <item>To Porte d\'Orléan (est)</item>
        <item>To Pont de Sèvre (ouest)</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
